<resources>
    <string name="app_name">Ticked Now</string>
    <string name="TxtBarraPesquisa">Pesquise um destino</string>
    <string name="TxtCategorias">Categorias</string>
    <string name="TxtDestaques">Destaques</string>
    <string name="TxtShows">Shows</string>
    <string name="TxtEspetaculos">Espetáculos</string>
    <string name="TxtExposicoes">Exposições</string>
    <string name="TxtStandUp">Stand-Up</string>
    <string name="TxtPalestras">Palestras</string>
    <string name="TxtEventos">Eventos</string>
    <string name="TxtVerMais">Ver Mais</string>
    <string name="TxtContaOuLogin">Criar conta ou fazer login</string>
    <string name="TxtExplorar">Explorar</string>
    <string name="TxtHome">Início</string>
    <string name="TxtIngressos">Ingressos</string>
    <string name="TxtProcurar">Procurar por um destino</string>
    <string name="TxtEmail">Email</string>
    <string name="Txtsenha">Senha</string>
    <string name="TxtBtnLogar">Entrar</string>
    <string name="TxtLogin">Login</string>
    <string name="TxtLoginBemVindo">Seja Bem-vindo!</string>
    <string name="TxtFormaDeLogin">Entre Com</string>
    <string name="TxtOu">OU</string>
    <string name="TxtShowSenha">Mostrar senha</string>
    <string name="descImgLogoGoogle">Logo Google</string>
    <string name="descImgLogoFacebook">Logo Facebook</string>
    <string name="TxtEventosShow1DT">Data: 27 de ago de 2022 - 28 de ago</string>
    <string name="TxtEventosShow1NM">Nome:Festival Sarará 2022</string>
    <string name="TxtEventosShow1LC">Local:Esplanada do Mineirão-MG</string>
    <string name="TxtEventosShow2DT">Data: 26 de set de 2021</string>
    <string name="TxtEventosShow2NM">Nome:ELBA RAMALHO</string>
    <string name="TxtEventosShow2LC">Local:Parque Vibrar-DF</string>
    <string name="TxtEventosShow3DT">Data: 09 de abri de 2022,</string>
    <string name="TxtEventosShow3NM">Nome:Breve Festival 2022</string>
    <string name="TxtEventosShow3LC">Local:Mineirão-MG</string>
    <string name="TxtEventosShow4DT">Data: 31 de Jul a 8 de Ago </string>
    <string name="TxtEventosShow4NM">Nome: Ta Embarcado</string>
    <string name="TxtEventosShow4LC">Local:Teatro das Artes-SP</string>
    <string name="TxtEventosPeca1DT">Data: 25 de set de 2021</string>
    <string name="TxtEventosPeca1NM">Nome: Peça O Juíz de Paz na Roça</string>
    <string name="TxtEventosPeca1LC">Local: Oficina De Atores Abel Santana-ES</string>
    <string name="TxtEventosPeca2DT">Data: 2 de out de 2021</string>
    <string name="TxtEventosPeca2NM">Nome: Peça teatral De onde vem o Baião</string>
    <string name="TxtEventosPeca2LC">Local: Mural Casa Natura-Sp</string>
    <string name="TxtEventosPeca3DT">Data: 12 OUt 2021</string>
    <string name="TxtEventosPeca3NM">Nome: Tributo ao rei do pop</string>
    <string name="TxtEventosPeca3LC">Local: Espaço Hall</string>
    <string name="TxtEventosPeca4DT">Data: 25 a 26 de Jun 2020</string>
    <string name="TxtEventosPeca4NM">Nome: the lord of the rings the two towers – in concert</string>
    <string name="TxtEventosPeca4LC">Local: Ginásio do Ibirapuera-SP</string>
    <string name="TxtEventosExp1DT">Data: 24 a 26 de Jun 2021</string>
    <string name="TxtEventosExp1NM">Nome: Mangalagar Marchador</string>
    <string name="TxtEventosExp1LC">Local: Parque de exposições de Tamoios-RJ</string>
    <string name="TxtEventosExp2DT">Data: 15 de out de 2020 a 9 de ago de 2021</string>
    <string name="TxtEventosExp2NM">Nome: OSGEMEOS: segredos</string>
    <string name="TxtEventosExp2LC">Local: Pinaconteca-SP</string>
    <string name="TxtEventosExp3DT">Data: 24 a 26 de Jun 2021</string>
    <string name="TxtEventosExp3NM">Nome: 19 Cultura Inglesa festival</string>
    <string name="TxtEventosExp3LC">Local: OnLine</string>
    <string name="TxtEventosExp4DT">Data: 12 set a 11 de out 2021</string>
    <string name="TxtEventosExp4NM">Nome: 10 Amostra 3M de arte</string>
    <string name="TxtEventosExp4LC">Local: Online</string>
    <string name="TxtEventosStand1DT">Data: 24 set 2021</string>
    <string name="TxtEventosStand1NM">Nome: Inter Ligados</string>
    <string name="TxtEventosStand1LC">Local: Jaú -Sp</string>
    <string name="TxtEventosStand2DT">Data: 08 out 2021</string>
    <string name="TxtEventosStand2NM">Nome: Novas Historias</string>
    <string name="TxtEventosStand2LC">Local: Teatro desafio -Sp</string>
    <string name="TxtEventosStand3DT">Data: 21 out 2021</string>
    <string name="TxtEventosStand3NM">Nome: A vida é muito boa ne?</string>
    <string name="TxtEventosStand3LC">Local: Jundiaí-Sp</string>
    <string name="TxtEventosStand4DT">Data: 26 set 2021</string>
    <string name="TxtEventosStand4NM">Nome: Stand Up Raiz</string>
    <string name="TxtEventosStand4LC">Local: Black House -Sp</string>
    <string name="TxtEventosPalet1DT">Data: 24 out 2021</string>
    <string name="TxtEventosPalet1NM">Nome: 72 Dias - Mostra artística sobre a Comuna de Paris</string>
    <string name="TxtEventosPalet1LC">Local: Online</string>
    <string name="TxtEventosPalet2DT">Data: 30 out 2021</string>
    <string name="TxtEventosPalet2NM">Nome: Direito e sexualidade</string>
    <string name="TxtEventosPalet2LC">Local: Online</string>
    <string name="TxtEventosPalet3DT">Data: 08 out 2021</string>
    <string name="TxtEventosPalet3NM">Nome: Setembro Amarerelo, não de as costas</string>
    <string name="TxtEventosPalet3LC">Local: Online</string>
    <string name="TxtEventosPalet4DT">Data: 03 out 2021</string>
    <string name="TxtEventosPalet4NM">Nome: Autismo na vida adulta</string>
    <string name="TxtEventosPalet4LC">Local: Online</string>
    <string name="TxtFavoritos">Favoritos</string>
    <string name="TxtFavoritosMensagem">Você ainda não tem nem um evento favorito</string>
    <string name="TxtbtnBuscar">Procurar eventos</string>
    <string name="TxtFavoritosBar">Favoritos</string>
    <string name="TxtLocBar">Localização</string>
    <string name="TxtHomesBar">Home</string>
    <string name="TxtIngressoBar">Ingresso</string>
    <string name="TxtBusca">Busque por eventos</string>
    <string name="TxtPesq">Pesquisar</string>
    <string name="TxtNomeEvento1">Ta Embarcado - FABIO RABIN</string>
    <string name="TxtHoraEvento1">Sáb e Dom às 18:30, Sáb às 20:00</string>
    <string name="TxtLocalEvento1">Teatro das Artes</string>
    <string name="TxtNomeEvento2">Breve Festival 2022</string>
    <string name="TxtHoraEvento2">09 de abril de 2022, 12h-23h59</string>
    <string name="TxtLocalEvento2">Mineirão - Belo Horizonte, MG</string>
    <string name="TxtNomeEvento3">Festival Sarará 2022</string>
    <string name="TxtHoraEvento3">27 de agosto de 2022, 12h - 28 de agosto de 2022, 00h</string>
    <string name="TxtLocalEvento3">Esplanada Mineirão - Belo Horizonte, MG</string>
    <string name="TxtNomeEvento4">ARRAIÁ DO VIBRÁ - ELBA RAMALHO</string>
    <string name="TxtHoraEvento4">Sáb às 17:00, 21 Ago</string>
    <string name="TxtLocalEvento4">Parque Vibrar - Ginásio Nilson Nelson</string>
    <string name="TxtConta">Conta</string>
    <string name="TxtNomeUser">Luiz Maia</string>
    <string name="TxtEmailUser">Maia.Luiz@gmail.com</string>
    <string name="TxtPontosDisp">Pontos disponíveis</string>
    <string name="TxtPontZERO">0</string>
    <string name="TxtPais">País</string>
    <string name="TxtRUS">RUS</string>
    <string name="TxtInfoConta">Informações da minha conta</string>
    <string name="TxtAlterarEmail">Alterar Email</string>
    <string name="TxtCuponsCred">Código de Desconto</string>
    <string name="TxtTema">Escolha um tema</string>
    <string name="TxtPadrao">Padrão</string>
    <string name="TxtCom">Comunicação</string>
    <string name="TxtAvalie">Avalie o app</string>
    <string name="TxtHistorico">Historico de busca</string>
    <string name="TxtSuporte">Surporte</string>
    <string name="TxtInfoLegais">Informaçoes legais</string>
    <string name="TxtTermosCond">Temos e condições</string>
    <string name="TxtCert">Certificações</string>
    <string name="TxtLogout">Fazer logout</string>
    <string name="TxtClaro">Tema</string>
    <string name="TxtEscuro">Escuro</string>
    <string name="TxtNome">Nome</string>
    <string name="TxtSalvar">SALVAR</string>
    <string name="TxtEditar">Editar</string>
    <string name="TxtSuaAvaliacao">Sua Avaliação</string>
    <string name="TxtEnviar">Enviar</string>
    <string name="TxtCodCupom">Insira o código do cupom</string>
    <string name="TxtConfirmar">CONFIRMAR</string>
    <string name="TxtNomeEvento">Ta Embarcado - FABIO RABIN</string>
    <string name="TxtClasseEvento">Stand up</string>
    <string name="TxtHoraEvento">Sáb e Dom às 18h30, Sáb às 20h00</string>
    <string name="TxtDataEvento">31 de Julho a 8 de Agosto</string>
    <string name="TxtLocal">Teatro das Artes</string>
    <string name="TxtDescEvento">Descrição</string>
    <string name="TxtDescEventoTexto">“TÁ EMBAÇADO!” é o título de seu novo show, o 4.º solo de sua carreira.
    O título reflete o momento da vida de um homem que tenta escapar da rotina para salvar seu relacionamento,
    mas enfrenta dificuldades enormes como a TPM de sua esposa e sua própria falta de sensibilidade dentro de
    seu casamento. Além disso, tem que criar uma filha que está crescendo e começando a questionar o mundo para
    um pai que quase sempre não tem as respostas certas… Talvez este seja seu show mais polêmico, pois além da
    família, aborda grandes tabus como: Drogas, preconceito e o “politicamente correto”, que tenta impor ao comediante limites em sua criatividade.</string>
    <string name="TxtLocEvento">Localização</string>
    <string name="TxtLocalizacaoEvento">Av. Rebouças, 3970 Lj 409, São Paulo - São Paulo</string>
    <string name="TxtClassificaoEtaria">Classificação Etária:</string>
    <string name="TxtClasEtaria">14 Anos</string>
    <string name="txtBtnComprar">Comprar</string>
    <string name="txtIngressos">Ingressos</string>
    <string name="txtIngressosIntera">INTEIRA</string>
    <string name="txtIngressosMEia">MEIA</string>
    <string name="txtIngressosIdoso">IDOSO</string>
    <string name="txtValorInteita">70,00 (taxa R$:2,00)</string>
    <string name="txtValorMeia">35,00 (taxa R$:2,00)</string>
    <string name="txtValorIdoso">35,00 (taxa R$:2,00)</string>
    <string name="txtNumpass">0</string>
    <string name="txtTotal">Total:</string>
    <string name="txtTotalvl">00,00</string>
    <string name="txtAvancar">Avançar</string>
    <string name="txtIngresso">Meus Ingressos</string>
    <string name="TxtIngressoMensagem">Você ainda não tem nem um ingresso para eventos</string>
    <string name="descImgCartaz">Cartaz do evento</string>
    <string name="descImgRelogio">Icon Relogio</string>
    <string name="descImgLocalizacao">Icon Localização</string>
    <string name="descImgDesenhoHisteVazio">Icon Trsite</string>
    <string name="descImgSeta">seta para voltar para a ultima tela</string>
    <string name="descImgSino">Icon de sino Para notficações</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBbcdfu_p3Xgz_hDoZ8GcW0GFhqFOuD5zw</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>