<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Pesquisa_evento">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <View
        android:id="@+id/myRectangleView2"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/hearder_pesquisa"
        android:layout_marginStart="-30dp"/>

    <ImageView
        android:id="@+id/ImgBtnVoltaHome"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-150dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/descImgSeta"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/seta_voltar" />

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/TxtBusca"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />


    <!--==================barra de pesquisa=============-->
    <EditText
        android:id="@+id/editTextPesquisa"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/TxtPesq"
        android:background="@drawable/borda_bar_de_pesquisa"
        android:backgroundTint="#F1F1F1"
        android:drawablePadding="5dp"
        android:hint="@string/TxtPesq"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="16sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <ImageButton
        android:id="@+id/imgBtnFiltro"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="end"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ajustamento" />

<!--==================CORPO=================-->

<!--Cards dos eventos-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view1"
                style="@style/CardBasePesquisa"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView1"
                    style="@style/ImgCardBasePesquisa"
                    android:contentDescription="@string/descImgCartaz"
                    app:srcCompat="@drawable/poster5" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="20dp"
                    android:text="@string/TxtNomeEvento1"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView12"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="60dp"
                    android:text="@string/TxtLocalEvento1"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/textView13"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="100dp"
                    android:text="@string/TxtHoraEvento1"
                    android:textSize="14sp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewEvento2"
                style="@style/CardBasePesquisa"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/ImgCardBasePesquisa"
                    android:contentDescription="@string/descImgCartaz"
                    app:srcCompat="@drawable/poster2" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="20dp"
                    android:text="@string/TxtNomeEvento2"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView15"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="60dp"
                    android:text="@string/TxtLocalEvento2"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/textView16"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="100dp"
                    android:text="@string/TxtHoraEvento2"
                    android:textSize="14sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewEvento3"
                style="@style/CardBasePesquisa"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/ImgCardBasePesquisa"
                    android:contentDescription="@string/descImgCartaz"
                    app:srcCompat="@drawable/poster3" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="20dp"
                    android:text="@string/TxtNomeEvento3"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView18"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="60dp"
                    android:text="@string/TxtLocalEvento3"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/textView19"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="100dp"
                    android:text="@string/TxtHoraEvento3"
                    android:textSize="14sp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewEvento4"
                style="@style/CardBasePesquisa"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/ImgCardBasePesquisa"
                    android:contentDescription="@string/descImgCartaz"
                    app:srcCompat="@drawable/poster4" />

                <TextView
                    android:id="@+id/textView21"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="20dp"
                    android:text="@string/TxtNomeEvento4"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textView22"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="60dp"
                    android:text="@string/TxtLocalEvento4"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/textView23"
                    style="@style/TxtCardBasePesquisa"
                    android:layout_marginTop="100dp"
                    android:text="@string/TxtHoraEvento4"
                    android:textSize="14sp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>